--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" value="1" id="duplicated" checked>
                 <label class="form-check-label" for="duplicated">
-                    Duplicated
+                    Twin
                 </label>
             </div>
             <div class="form-check form-check-inline">
