--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             padding: 0.5rem;
             width: 100%;
             height: 340px;
-            resize: none;
+            max-height: 340px;
+            overflow: auto;
         }
         .line-numbers {
             border-right: 1px solid rgb(203 213 225);
@@ -75,7 +76,7 @@
         <div class="found" id="found">Found: 0 Result</div>
         <div class="container-result">
             <div class="line-numbers" id="line-numbers"></div>
-            <textarea name="result" id="result" class="result"></textarea>
+            <div name="result" id="result" class="result"></div>
         </div>
     </div>
     
@@ -143,7 +144,8 @@
             };
 
             const calculateLineNumbers = () => {
-                const lines = textarea.value.split('\n');
+                const lines = textarea.innerHTML.split('<br>');
+                console.log(lines)
                 const numLines = lines.map((line) => calculateNumLines(line));
 
                 let lineNumbers = [];
@@ -206,7 +208,7 @@
 
             result.innerHTML = ''
             let counter = 0
-            let separator = wrap.checked ? '*' : '\n'
+            let separator = wrap.checked ? '*' : '<br>'
             let resultHTML = ''
             for (var i=0;i<=generated.length;i++) {
                 
